--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
     "build:ui": "rm -rf dist && cd /Users/hamildimapanat/Desktop/fso_part1 && npm run build && cp -r dist /Users/hamildimapanat/Desktop/notes_backend",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.2",
+    "@stylistic/eslint-plugin-js": "^1.6.2",
+    "eslint": "^8.57.0",
     "nodemon": "^3.1.0"
   }
 }
