--- a/fly.toml
+++ b/fly.toml
@@ -8,8 +8,11 @@ primary_region = 'ewr'
 
 [build]
 
+[env]
+  PORT = "3001"
+
 [http_service]
-  internal_port = 3000
+  internal_port = 3001
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
